Devise gem & Audit Initiation part

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,7 +5,7 @@
 			<li><a href="/">Dashboard</a></li>
 			<li><a href="/">Calendar</a></li>
 			<li><a href="/">MyTask</a></li>
-			<li><a href="/">Audit Initiation</a></li>
+			<li><a href="/auditinits">Audit Initiation</a></li>
 			<li><a href="/">Pre Audit</a></li>
 			<li><a href="/">Audit Investigation</a></li>
 			<li><a href="/">Post Audit </a></li>
