--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,16 @@
-<div class="navbar">
-	<div class="navbar-inner">
-		<a class="brand" href="#">FixNix Audit</a>
-		<ul class="nav">
+<nav class="navbar navbar-default" role="navigation">
+<div class="container-fluid">
+<!-- Logo/Company Name -->
+	<div class="navbar-header">
+		<a href="#" class="navbar-brand">FixNix Audit Management</a>
+	</div>
+<!-- End of Logo/Company Name -->
+
+
+<!-- Menu Division  -->
+	<div>
+		<ul class="nav navbar-nav">
+
 			<li><a href="/">Dashboard</a></li>
 			<li><a href="/">Calendar</a></li>
 			<li><a href="/">MyTask</a></li>
@@ -10,19 +19,22 @@
 			<li><a href="/">Audit Investigation</a></li>
 			<li><a href="/">Post Audit </a></li>
 			<li><a href="/">Follow Up </a></li>
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-					<a href="/"  class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="/">Configure</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+        	<li class="dropdown">
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
+          		<ul class="dropdown-menu">
+            		<li><a href="/">Configure</a></li>
 						<li><a href="/">Coso Scale</a>
 						<li><a href="/">Score Card</a>
 						<li><a href="/">User Management</a></li>
 						<li><a href="/">Audit Trail</a></li>
 						<li><a href="/">Escalation Matrix</a></li>
-					</ul>
-				</li>
-			</ul>
-		</ul>
+          		</ul>
+        	</li>
+      	</ul>
 	</div>
+<!-- End of Menu Division  -->
+
 </div>
+</nav>
