Calendar and other stuffs

--- a/app/views/auditinits/_form.html.erb
+++ b/app/views/auditinits/_form.html.erb
@@ -3,7 +3,7 @@
 	<div class="panel-heading">Create New Audit</div>
   	<div class="panel-body">
    		<div class="col-xs-12 col-sm-6 col-md-8 col-lg-offset-1">
-    		<ul class="nav nav-tabs">
+    		<ul class="nav nav-pills">
     			<li class="active"><a href="#organization" data-toggle="tab">Audit Info</a></li>
   				<li><a href="#client" data-toggle="tab">Client Info</a></li>
   				<li><a href="#team" data-toggle="tab">Team Info</a></li>
