--- a/app/views/auditinits/new.html.erb
+++ b/app/views/auditinits/new.html.erb
@@ -1,2 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Edit Your Audit</title>
+</head>
+<body>
+
+<!-- Rendering Menu -->
 	<%= render :partial => 'layouts/menu' %>
-<%= render "form" %>
+
+<!-- Renderinf Form -->
+	<%= render "form" %>
+
+</body>
+</html>
+
+
