--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,13 +12,14 @@
 		<ul class="nav navbar-nav">
 
 			<li><a href="/">Dashboard</a></li>
-			<li><a href="/">Calendar</a></li>
+			<li><a href="/calendars">Calendar</a></li>
 			<li><a href="/">MyTask</a></li>
 			<li><a href="/auditinits">Audit Initiation</a></li>
 			<li><a href="/">Pre Audit</a></li>
 			<li><a href="/">Audit Investigation</a></li>
 			<li><a href="/">Post Audit </a></li>
 			<li><a href="/">Follow Up </a></li>
+			
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
         	<li class="dropdown">
