--- a/app/views/auditinits/_form.html.erb
+++ b/app/views/auditinits/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_for(@auditinit) do |f| %>
 <div class="panel panel-primary">
 	<div class="panel-heading">Create New Audit</div>
-  	<div class="panel-body">
+  	<div class="panel-body" style="height:900px">
    		<div class="col-xs-12 col-sm-6 col-md-8 col-lg-offset-1">
-    		<ul class="nav nav-pills">
-    			<li class="active"><a href="#organization" data-toggle="tab">Audit Info</a></li>
-  				<li><a href="#client" data-toggle="tab">Client Info</a></li>
-  				<li><a href="#team" data-toggle="tab">Team Info</a></li>
-  				<li class="pull-right"><%= f.submit 'Submit',  :class => "btn btn-success btn-sm" %></li>
-    		</ul>
-		
+        <ul class="breadcrumb">
+          <li class="active"><a href="#organization" data-toggle="tab">Audit</a></li>
+          <li><a href="#client" data-toggle="tab">Plan</a></li>
+          <li><a href="#team" data-toggle="tab">Team </a></li>
+          <li><a href="#confirmation" data-toggle="tab">Confirmation</a></li>
+        </ul>
+        		
 			<div class="tab-content">
 				<div class="tab-pane active" id="organization">
     				<div class="form-inputs">
@@ -46,6 +46,13 @@
 
 				<div class="tab-pane" id="client">
     				<div class="form-inputs">
+            <div class="input-sm">
+                  <div class="col-lg-12">
+                <%= f.label "Client Name" %>
+              <%= f.text_field :client_name  ,:class =>  "form-control input-sm" %>
+                </div>
+                </div>
+               <br/><br/>
     				  <div class="input-sm">
         				  <div class="col-lg-12">
 					    	<%= f.label "Type" %>
@@ -109,6 +116,17 @@
        					<br/><br/>                   
     				</div>
 				</div>
+
+        <div class="tab-pane" id="confirmation">
+            <div class="form-inputs">
+              <div class="input-sm">
+                <div class="col-lg-12">
+                <%= f.submit 'Submit',  :class => "btn btn-success btn-sm" %>
+                </div>
+              </div>
+               <br/><br/>      
+            </div>
+        </div>
 
     		</div>
 		</div>
