--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,107 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Edit Profile</title>
+    <style type="text/css">
+       .form-group.last { margin-bottom:0px; }
+    </style>
+</head>
+<body>
 
+<!-- Rendering Menu -->
+  <%= render :partial => 'layouts/menu' %>
+
+<!-- <h2>Edit <%= resource_name.to_s.humanize %></h2> -->
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
+  <div class="container"> 
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="row-fluid">
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="panel panel-info ">
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+        <div class="panel-heading">Edit Your Profile</div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+        <div class="panel-body">
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+          <form class="form-inline" role="form">
 
-  <div><%= f.submit "Update" %></div>
+            <div class="form-group">
+               <small><label class="col-sm-3 control-label">Email</label></small>
+                <div>
+                  <%= f.email_field :email, :autofocus => true , label: false %>
+                </div>
+            </div>
+
+            <div class="form-group">
+              <div>
+                <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+                <div >
+                  Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+                </div>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <small><label class="col-sm-3 control-label">Password</label></small>
+                <div >
+                  <%= f.password_field :password, :autocomplete => "off"  %>
+                </div>  
+            </div>
+
+             <div class="form-group">
+                <small><label class="col-sm-3 control-label">Confirm Password</label></small>
+                <div>
+                   <%= f.password_field :password_confirmation, :autocomplete => "off"  %>
+                </div>  
+            </div>
+
+            <div class="form-group">
+                <small><label class="col-sm-3 control-label">New Password</label></small>
+                <div >
+                 <%= f.password_field :current_password, :autocomplete => "off" %>
+              </div>  
+            </div>
+
+            <div class="form-group last">
+              <div class="col-sm-offset-3 col-sm-9">
+                <%= f.submit "Update" ,  class: "btn btn-default pull-left"%>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div class="panel-footer"> 
+              Cancel your account 
+              <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>
+              <%= link_to "Back", :back%> 
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 <% end %>
+</body>
+</html>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
-<%= link_to "Back", :back %>
+
+
+
+
+
+
+
+
+
+
+
+           
+
+           
+       
+
+
