--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,77 @@
-<h2>Sign up</h2>
+
+
+
+<style type="text/css">
+	.form-group.last { margin-bottom:0px; }
+</style>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+<div class="container">	
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+	<div class="row-fluid">
 
-  <div><%= f.submit "Sign up" %></div>
+		<div class="col-lg-5 col-lg-offset-3" style="margin-left:300px">
+
+			<div class="panel panel-info">
+
+				<div class="panel-heading">Sign Up</div>
+
+				<div class="panel-body">
+
+					<form class="form-inline" role="form">
+
+						<div class="form-group">
+
+						<small><labe class="col-sm-3 control-label">
+                            Email</label></small>
+								<div>
+								<%= f.email_field :email, :autofocus => true , label: false %>
+							</div>
+
+						</div>
+
+						<div class="form-group">
+								<small><label class="col-sm-3 control-label">
+                            Password</label></small>
+								<div >
+								<%= f.password_field :password, label: false %>
+							</div>	
+						</div>
+
+						<div class="form-group">
+								<small><label class="col-sm-3 control-label">
+                            Confirm Password</label></small>
+								<div >
+								<%= f.password_field :password_confirmation , label: false %>
+							</div>	
+						</div>
+
+						<div class="form-group last">
+							<div >
+								<%= f.submit "Sign Up" ,  class: "btn btn-default pull-left"%>
+							</div>
+						</div>
+					
+					</form>
+
+				</div>
+
+				<div class="panel-footer"> <%= render "devise/shared/links" %> </div>
+
+			</div>
+		
+		</div>
+		
+	</div>
+
+	
+
+  	
+	
+</div>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
