--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -33,7 +33,16 @@
 						<li><a href="/">Escalation Matrix</a></li>
           		</ul>
         	</li>
-      	</ul>
+        	<% if user_signed_in? %>
+        	<li class="dropdown">
+          		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+          		<ul class="dropdown-menu">
+						<li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+						<li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
+          		</ul>
+        	</li>
+        	<% end %>
+      	</ul> 
 	</div>
 <!-- End of Menu Division  -->
 
