--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
 
 						<div class="form-group">
 
-						<small><labe class="col-sm-3 control-label">
+						<small><label class="col-sm-3 control-label">
                             Email</label></small>
 								<div>
 								<%= f.email_field :email, :autofocus => true , label: false %>
@@ -51,7 +51,7 @@
 
 						<div class="form-group last">
 							<div >
-								<%= f.submit "Sign Up" ,  class: "btn btn-default pull-left"%>
+								<%= f.submit "Sign Up" ,  class: "btn btn-default"%>
 							</div>
 						</div>
 					
