--- a/app/views/auditinits/_form.html.erb
+++ b/app/views/auditinits/_form.html.erb
@@ -1,4 +1,28 @@
+<script>
+  $(function() {
+     $( "#datepicker" ).datepicker({
+      dateFormat: "yy-mm-dd"    });
+     $( "#datepicker1" ).datepicker({
+      dateFormat: "yy-mm-dd"    });     
+  });
+  </script>
+
+
 <%= form_for(@auditinit) do |f| %>
+  
+    <% if @auditinit.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@auditinit.errors.count, "error") %> prohibited this businessunit from being saved:</h2>
+          <ul>
+          <% @auditinit.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+      </div>
+    <% end %>
+
+
+
 <div class="panel panel-primary">
 	<div class="panel-heading">Create New Audit</div>
   	<div class="panel-body" style="height:900px">
@@ -14,28 +38,28 @@
 				<div class="tab-pane active" id="organization">
     				<div class="form-inputs">
     				  <div class="input-sm">
-        				  <div class="col-lg-12">
+        				  <div class="col-lg-10">
 					    	<%= f.label "Audit Title" %>
 							<%= f.text_field :title, :class =>  "form-control" %>
 				    	  </div>
 			        	</div>
     				   <br/><br/>
     				   <div class="input-sm">
-        				   <div class="col-lg-12">
+        				   <div class="col-lg-10">
     						   <%= f.label "Audit Purpose" %>
 							   <%= f.text_area :purpose , :rows => 5, :cols => 25 , :class =>  "form-control" %>
    			    		    </div>
     					</div>
     					<br/><br/>
     					<div class="input-sm">
-         					<div class="col-lg-12">
+         					<div class="col-lg-10">
       							<%= f.label "Audit Scope" %>
 								<%= f.text_area :scope , :rows => 5, :cols => 25 ,    :class =>  "form-control" %>
       						</div>
       					</div>
       					<br/><br/>
       					<div class="input-sm">
-          					<div class="col-lg-12">
+          					<div class="col-lg-10">
       							<%= f.label "Audit Summary" %>
 								<%= f.text_area :summary , :rows => 5, :cols => 25 ,    :class =>  "form-control"%>
 						    </div>
@@ -47,37 +71,37 @@
 				<div class="tab-pane" id="client">
     				<div class="form-inputs">
             <div class="input-sm">
-                  <div class="col-lg-12">
+                  <div class="col-lg-10">
                 <%= f.label "Client Name" %>
               <%= f.text_field :client_name  ,:class =>  "form-control input-sm" %>
                 </div>
                 </div>
                <br/><br/>
     				  <div class="input-sm">
-        				  <div class="col-lg-12">
+        				  <div class="col-lg-10">
 					    	<%= f.label "Type" %>
 							<%= f.text_field :a_type  ,:class =>  "form-control input-sm" %>
 				    	  </div>
 			        	</div>
     				   <br/><br/>
     				   <div class="input-sm">
-        				   <div class="col-lg-12">
+        				   <div class="col-lg-10">
     						<%= f.label "Department" %>
 							<%= f.text_field :location  ,:class =>  "form-control" %>  
    			    		    </div>
     					</div>
     					<br/><br/>
     					<div class="input-sm">
-         					<div class="col-lg-12">
+         					<div class="col-lg-4">
 							   <%= f.label "Start Date" %>
-							   <%= f.text_field :start_date  ,:class =>  "form-control"%>
+							   <%= f.datepicker :start_date ,:class =>  "form-control input-sm" %>
       						</div>
       					</div>
       					<br/><br/>
       					<div class="input-sm">
-          					<div class="col-lg-12">						
+          					<div class="col-lg-4">						
 								<%= f.label "End Date " %>
-								<%= f.text_field :end_date  ,:class =>  "form-control" %>	
+								<%= f.datepicker :end_date ,:class =>  "form-control input-sm" %>	
 						    </div>
       					</div>
        					<br/><br/>                   
@@ -87,28 +111,28 @@
 				<div class="tab-pane" id="team">
     				<div class="form-inputs">
     				  <div class="input-sm">
-        				  <div class="col-lg-12">
+        				  <div class="col-lg-10">
 					    	<%= f.label "Auditor Name" %>
 							<%= f.text_field :auditor_name   ,:class =>  "form-control"%>
 				    	  </div>
 			        	</div>
     				   <br/><br/>
     				   <div class="input-sm">
-        				   <div class="col-lg-12">
+        				   <div class="col-lg-10">
 							<%= f.label "Auditor Email" %>
 							<%= f.text_field :auditor_email  ,:class =>  "form-control"%>
    			    		    </div>
     					</div>
     					<br/><br/>
     					<div class="input-sm">
-         					<div class="col-lg-12">
+         					<div class="col-lg-10">
 							   <%= f.label "Auditee Name" %>
 							   <%= f.text_field :auditee_name ,:class =>  "form-control" %>
       						</div>
       					</div>
       					<br/><br/>
       					<div class="input-sm">
-          					<div class="col-lg-12">						
+          					<div class="col-lg-10">						
 								<%= f.label "Auditee Email" %>
 								<%= f.text_field :auditee_email ,:class =>  "form-control" %>
 						    </div>
@@ -120,7 +144,7 @@
         <div class="tab-pane" id="confirmation">
             <div class="form-inputs">
               <div class="input-sm">
-                <div class="col-lg-12">
+                <div class="col-lg-10">
                 <%= f.submit 'Submit',  :class => "btn btn-success btn-sm" %>
                 </div>
               </div>
