--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -25,7 +25,7 @@
         	<li class="dropdown">
           		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <b class="caret"></b></a>
           		<ul class="dropdown-menu">
-            		<li><a href="/">Configure</a></li>
+            		<li><a href="/configures">Configure</a></li>
 						<li><a href="/">Coso Scale</a>
 						<li><a href="/">Score Card</a>
 						<li><a href="/">User Management</a></li>
