--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -8,5 +8,28 @@
 <!-- Rendering Menu -->
 	<%= render :partial => 'layouts/menu' %>
 
+
+	<div class="container">
+
+  		<div class="row-fluid">
+
+			<div class="col-lg-2" style="margin-left:1px">
+  				<small>
+					<div class="panel panel-primary">
+					    <div class="panel-heading"><center>Initated Audit</center></div>
+  						<div class="panel-body">
+    	 				 	<% @count_audit.each do |audit| %>
+    	 				 	<center>
+							<%= audit.count %>
+							</center>
+    	  					<% end %>
+ 						</div>
+					</div>
+  				</small>
+			</div>
+	  </div>
+
+	</div>
+
 </body>
 </html>
