--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default" role="navigation">
-<div class="container-fluid">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="container-">
 <!-- Logo/Company Name -->
 	<div class="navbar-header">
 		<a href="#" class="navbar-brand">FixNix Audit Management</a>
@@ -47,4 +47,4 @@
 <!-- End of Menu Division  -->
 
 </div>
-</nav>
+</div>
