--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -11,7 +11,7 @@
 	<div>
 		<ul class="nav navbar-nav">
 
-			<li><a href="/">Dashboard</a></li>
+			<li class="active"><a href="/">Dashboard</a></li>
 			<li><a href="/calendars">Calendar</a></li>
 			<li><a href="/">MyTask</a></li>
 			<li><a href="/auditinits">Audit Initiation</a></li>
